<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_base_background" >

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:scaleType="fitXY"
        android:src="@drawable/ic_launcher" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/app_name"
            android:textColor="@color/color_base_title"
            android:textSize="55sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal"
            android:text="@string/login_to_more"
            android:textColor="@color/color_base_subtitle"
            android:textSize="16sp" />

        <Button
            android:id="@+id/no_login_enter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/selector_login_button"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/no_login_enter"
            android:textColor="@color/color_base_background"
            android:textSize="18sp" />

        <Button
            android:id="@+id/login_qq"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/selector_login_button"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/login_qq"
            android:textColor="@color/color_base_background"
            android:textSize="18sp" />

        <Button
            android:id="@+id/login_weixin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/selector_login_button"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/login_wx"
            android:textColor="@color/color_base_background"
            android:textSize="18sp" />
    </LinearLayout>

</RelativeLayout>